--- a/app/template/index.html
+++ b/app/template/index.html
@@ -1,4 +1,5 @@
-{% extends 'base.html'%} {% import 'macros.html' as macro%}
+{% extends 'base.html'%}
+{% import 'macros.html' as macro%}
 
 <!--styles Block-->
 
@@ -19,7 +20,7 @@
 </div>
 <div class="container" style="text-align:center">
         <!-- News Sources -->
-        <h1 style="font-family: 'Bitter', serif;font-size:34px;text-decoration:underline;color:crimson;"> NEWS CHANNELS</h3>
+        <h1 style="font-family: 'Bitter', serif;font-size:34px;text-decoration:underline;color:cyan;"> NEWS CHANNELS</h3>
 </div>
 <div class="row">
     <ul style="font-family: 'Bitter', serif;font-size:18px;font-weight:normal;">
