--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,6 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <a class="navbar-brand" href="/"> <img src="../static/images/logo.png" alt="logo" class="image" style="width:50px;height:30px;"> </a>
             <a class="navbar-brand" href="/"> WORLD NEWS CENTRE </a>
         </div>
         <div class="navbar-collapse collapse">
